--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
 /.env
 /.env.local
-/.env.development.local
+/.env.developqqment.local
 /.env.test.local
 /.env.production.local
 /dist
